deleted:    schedule/background.jpg 	modified:   schedule/index.html 	modified:   schedule/style.css

--- a/schedule/style.css
+++ b/schedule/style.css
@@ -1,6 +1,6 @@
 
 body,.main-table::before {
-	background: url("background.jpg") 0 / cover fixed;
+	background: url("https://s2.loli.net/2022/03/31/AdveunKBM261VhY.jpg") 0 / cover fixed;
 }
 
 .main-table{
